# Progetto

./: README.md  app.py  app_model.py  home.py  label_encoders_RF0.pkl  model_RF0_metrics.pkl  preprocess.py  pyproject.toml  random_forest_model_0.pkl  trainmodel.py
