[project]
name = "progetto-se2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "geopandas>=1.0.1",
    "joblib>=1.5.1",
    "polars>=1.27.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.2",
    "streamlit>=1.44.1",
]
